# crewai-projects

./: .gitignore
documentation_slack_bot/: README.md  pyproject.toml
documentation_slack_bot/src/documentation_slack_bot/: crew.py  main.py
documentation_slack_bot/src/documentation_slack_bot/config/: agents.yaml  tasks.yaml
slack_bot_langchain/: .env.example  .gitignore  Dockerfile  README.md  app.py  bot.py  doc_loader.py  requirements.txt
